[package]
name = "rparse"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"  # https://docs.rs/byteorder
tui = "0.19.0"       # https://docs.rs/tui
crossterm = "0.26.1" # https://docs.rs/crossterm

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
